# PlantManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  sample.db
include/: Colors.h  Console.h  Database.h  DateUtils.h  Draw.h  Logger.h  Plant.h  Record.h  Schedule.h  Sections.h  Setting.h  Species.h  UserActionHandler.h  Utils.h
src/: Console.cpp  Database.cpp  DateUtils.cpp  Draw.cpp  Logger.cpp  Plant.cpp  Record.cpp  Schedule.cpp  Sections.cpp  Setting.cpp  Species.cpp  UserActionHandler.cpp  Utils.cpp
tests/: DbTestObject.cpp  DbTestObject.h  TestDatabaseSource.db  testPlant.cpp  testSections.cpp
